# tetrahedron_pair_ML

./: .gitignore  PipelineOrchestrator.ipynb  PipelineOrchestrator.py  README.md  config.yaml  main.py  requirements.txt
config/: config.yaml
notebooks/: =4.2.0  data_analysis copy 2.ipynb  data_analysis copy 3.ipynb  data_analysis copy.ipynb  data_analysis.ipynb  ideal_dataset_data_analysis.ipynb  json_data_exploration.ipynb
scripts/: benchmark_data_size_vs_model_size.py  benchmark_inference_speed.py  benchmark_network_sizes.py  plot_benchmark_results.py  plot_data_size_benchmark.py
src/: Architectures.py  ArtifactsManager.py  CArchitectureManager.py  CArtifactsManager.py  CDataProcessor.py  CModelBuilder.py  CModelTrainer.py  CPipelineOrchestrator.py  CPipelineOrchestratorTest.py  DataProcessor.py  FileProcessor.py  GeometryUtils.py  ModelBuilder.py  ModelTrainer.py  data_processor.py  model_architecture.py  model_evaluator.py  model_trainer.py
src/evaluator/: CEvaluator.py  CMakeLists.txt  CUDAWrapper.cu  CppWrapper.cpp  Evaluator.py  PythonWrapper.py
src/evaluator/test_data/no_intersection/: tetrahedron_pair_no_intersection_p16_s100k.csv
src/evaluator/test_data/point_intersection/: tetrahedron_pair_point_intersection_p16_s100k.csv
src/evaluator/test_data/polygon_intersection/: tetrahedron_pair_polygon_intersection_p16_s100k.csv
src/evaluator/test_data/polyhedron_intersection/: tetrahedron_pair_polyhedron_intersection_p16_s100k_uniform_volums_0-0.01.csv
src/evaluator/test_data/segment_intersection/: tetrahedron_pair_segment_intersection_p16_s100k.csv
(+748 files in other folders)
